fixed some bugs and added time shifting functionality

--- a/style.css
+++ b/style.css
@@ -225,6 +225,15 @@ tr {
   text-decoration: none;
 }
 
+#videoSpeed {
+  float: left;
+}
+
+#timeShiftContainer {
+  float: right;
+  margin-right: 40px;
+}
+
 /************
 Modal Box
 ************/
